<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo_cow"
            android:layout_width="120dp"
            android:layout_height="144dp"
            android:src="@drawable/ic_cow_logo" />

        <TextView
            android:id="@+id/name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/md_theme_primary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/description_login"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/entrar_conta"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email_text"
            app:boxStrokeColor="@color/sage_green"
            app:hintTextColor="@color/sage_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/senha"
            app:boxStrokeColor="@color/sage_green"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/colorOnSurfaceVariant"
            app:hintTextColor="@color/sage_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/entrar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/description_to_register"
                android:textColor="@color/grafite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCadastreSe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_cadastro"
                android:textColor="@color/sage_green"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>