<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/ivCategory"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/bg_category_icon"
        android:padding="7dp"
        android:contentDescription="@string/category_icon_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@drawable/ic_category_other" />

    <TextView
        android:id="@+id/tvExpenseTitle"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivCategory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/llAmount"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        tools:text="@string/despesa_descricao" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvExpenseTitle"
        app:layout_constraintTop_toBottomOf="@id/tvExpenseTitle"
        android:layout_marginTop="4dp"
        tools:text="@string/data_sample" />

    <LinearLayout
        android:id="@+id/llAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valores_a_receber"
            android:textColor="@color/strawberry_red"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAmount"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/strawberry_red"
                android:textStyle="bold"
                tools:text="@string/value" />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_trending_down_24dp"
                app:tint="@color/strawberry_red" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
